fix blackjack on mobile

--- a/src/app/pages/blackjack/blackjack.component.scss
+++ b/src/app/pages/blackjack/blackjack.component.scss
@@ -191,7 +191,7 @@
       margin: 0 auto;
     }
     ul.cards li{
-      width: 30px;
+      margin-left: -55px;
     }
   }
   .deck{
